--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="img-header">
-        <img src="assets/img/logo.png" alt="Solicitor">
+        <img src="assets/profile/img/logo.png" alt="Solicitor">
     </div>
 </header>
 
@@ -42,7 +42,7 @@
 
             <div class="photo col-md-5 pl-md-0">
                 <figure class="w-100">
-                    <img src="assets/img/profile-photo.jpg" alt="">
+                    <img src="assets/profile/img/profile-photo.jpg" alt="">
                 </figure>
                 <h4>Currently at Osborne Solicitors</h4>
                 <a href="#" class="linked-in ">
@@ -117,28 +117,28 @@
     <h2>Awards</h2>
     <div class="awards d-flex flex-md-row flex-column justify-content-center align-items-md-start align-items-center ">
         <div class="award d-flex flex-column">
-            <img src="./assets/svg/award.svg" alt="">
+            <img src="assets/profile/svg/award.svg" alt="">
             <p>Maecenas elit orci,gravida ut, molestie non</p>
         </div>
         <div class="award d-flex flex-column">
-            <img src="./assets/svg/award2.svg" alt="">
+            <img src="assets/profile/svg/award2.svg" alt="">
             <p>Donec ante dolor,iaculis nec, gravidat</p>
         </div>
         <div class="award d-flex flex-column">
-            <img src="./assets/svg/award3.svg" alt="">
+            <img src="assets/profile/svg/award3.svg" alt="">
             <p>Sedlacinia. Suspendisse potenti.
                 Sed ultricies cursus</p>
         </div>
         <div class="award d-flex flex-column">
-            <img src="./assets/svg/award.svg" alt="">
+            <img src="assets/profile/svg/award.svg" alt="">
             <p>Maecenas elit orci,gravida ut, molestie non</p>
         </div>
         <div class="award d-flex flex-column">
-            <img src="./assets/svg/award2.svg" alt="">
+            <img src="assets/profile/svg/award2.svg" alt="">
             <p>Donec ante dolor,iaculis nec, gravidat</p>
         </div>
         <div class="award d-flex flex-column">
-            <img src="./assets/svg/award3.svg" alt="">
+            <img src="assets/profile/svg/award3.svg" alt="">
             <p>Sedlacinia. Suspendisse potenti.
                 Sed ultricies cursus</p>
         </div>
@@ -285,7 +285,7 @@
         </div>
     </section>
     <section id="write-comment" class="d-flex align-items-center flex-md-nowrap flex-wrap">
-        <img src="./assets/img/Userphoto.png" alt="">
+        <img src="assets/profile/img/Userphoto.png" alt="">
         <div class="input-wrap">
             <div class="tick"></div>
             <input type="text" placeholder="Write a review...">
@@ -308,7 +308,7 @@
         <div class="comment row m-0">
             <div class="user col-md-auto pl-md-0 d-flex flex-row flex-md-column">
                 <div class="rounded-circle">
-                    <img src="./assets/img/profile-photo.jpg" alt="">
+                    <img src="assets/profile/img/profile-photo.jpg" alt="">
                 </div>
                 <h2>Bill Murray</h2>
                 <h3>Added 2 moths ago</h3>
@@ -337,7 +337,7 @@
         <div class="comment row m-0">
             <div class="user col-md-auto pl-md-0 d-flex  flex-row flex-md-column">
                 <div class="rounded-circle">
-                    <img src="./assets/img/profile-photo.jpg" alt="">
+                    <img src="assets/profile/img/profile-photo.jpg" alt="">
                 </div>
                 <h2>Bill Murray</h2>
                 <h3>Added 2 moths ago</h3>
@@ -364,7 +364,7 @@
                 <div class="answer d-flex flex-column">
                     <div class="heading d-flex">
                         <div class="rounded-circle">
-                            <img src="./assets/img/profile-photo.jpg" alt="">
+                            <img src="assets/profile/img/profile-photo.jpg" alt="">
                         </div>
                         <div class="info d-flex flex-column">
                             <h3>Solicitor being reviewed: <strong>Mary Edwards</strong></h3>
@@ -421,7 +421,7 @@
     </div>
     <div class="content flex-md-row flex-column  justify-content-center d-flex ml-0 mr-0">
         <figure class="d-flex justify-content-center align-items-center ">
-            <img src="./assets/img/profile-photo.jpg" alt="">
+            <img src="assets/profile/img/profile-photo.jpg" alt="">
         </figure>
         <div class="text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore fugiat labore magnam minima odit.
