--- a/nopremium.html
+++ b/nopremium.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="img-header">
-        <img src="assets/img/logo.png" alt="Solicitor">
+        <img src="assets/profile/img/logo.png" alt="Solicitor">
     </div>
 </header>
 
@@ -42,7 +42,7 @@
 
             <div class="photo col-md-5 pl-md-0">
                 <figure class="w-100">
-                    <img src="assets/img/profile-photo.jpg" alt="">
+                    <img src="assets/profile/img/profile-photo.jpg" alt="">
                 </figure>
                 <h4>Currently at Osborne Solicitors</h4>
                 <a href="#" class="linked-in ">
@@ -90,7 +90,7 @@
             <div class="profile">
                 <div class="heading d-flex">
                     <figure>
-                        <img src="./assets/img/profile-photo.jpg" alt="">
+                        <img src="assets/profile/img/profile-photo.jpg" alt="">
                     </figure>
                     <div class="info d-flex flex-column align-items-start justify-content-start">
                         <h3>Orla Rooney</h3>
@@ -123,7 +123,7 @@
                 <div class="profile ">
                     <div class="heading d-flex">
                         <figure>
-                            <img src="./assets/img/profile-photo.jpg" alt="">
+                            <img src="assets/profile/img/profile-photo.jpg" alt="">
                         </figure>
                         <div class="info d-flex flex-column align-items-start justify-content-start">
                             <h3>Orla Rooney</h3>
@@ -150,7 +150,7 @@
                 <div class="profile ">
                     <div class="heading d-flex">
                         <figure>
-                            <img src="./assets/img/profile-photo.jpg" alt="">
+                            <img src="assets/profile/img/profile-photo.jpg" alt="">
                         </figure>
                         <div class="info d-flex flex-column align-items-start justify-content-start">
                             <h3>Orla Rooney</h3>
@@ -177,7 +177,7 @@
                 <div class="profile ">
                     <div class="heading d-flex">
                         <figure>
-                            <img src="./assets/img/profile-photo.jpg" alt="">
+                            <img src="assets/profile/img/profile-photo.jpg" alt="">
                         </figure>
                         <div class="info d-flex flex-column align-items-start justify-content-start">
                             <h3>Orla Rooney</h3>
@@ -343,7 +343,7 @@
         </div>
     </section>
     <section id="write-comment" class="d-flex align-items-center flex-md-nowrap flex-wrap">
-        <img src="./assets/img/Userphoto.png" alt="">
+        <img src="assets/profile/img/Userphoto.png" alt="">
         <div class="input-wrap">
             <div class="tick"></div>
             <input type="text" placeholder="Write a review...">
@@ -366,7 +366,7 @@
         <div class="comment row m-0">
             <div class="user col-md-auto pl-md-0 d-flex flex-row flex-md-column">
                 <div class="rounded-circle">
-                    <img src="./assets/img/profile-photo.jpg" alt="">
+                    <img src="assets/profile/img/profile-photo.jpg" alt="">
                 </div>
                 <h2>Bill Murray</h2>
                 <h3>Added 2 moths ago</h3>
@@ -395,7 +395,7 @@
         <div class="comment row m-0">
             <div class="user col-md-auto pl-md-0 d-flex  flex-row flex-md-column">
                 <div class="rounded-circle">
-                    <img src="./assets/img/profile-photo.jpg" alt="">
+                    <img src="assets/profile/img/profile-photo.jpg" alt="">
                 </div>
                 <h2>Bill Murray</h2>
                 <h3>Added 2 moths ago</h3>
@@ -422,7 +422,7 @@
                 <div class="answer d-flex flex-column">
                     <div class="heading d-flex">
                         <div class="rounded-circle">
-                            <img src="./assets/img/profile-photo.jpg" alt="">
+                            <img src="assets/profile/img/profile-photo.jpg" alt="">
                         </div>
                         <div class="info d-flex flex-column">
                             <h3>Solicitor being reviewed: <strong>Mary Edwards</strong></h3>
@@ -479,7 +479,7 @@
     </div>
     <div class="content flex-md-row flex-column  justify-content-center d-flex ml-0 mr-0">
         <figure class="d-flex justify-content-center align-items-center ">
-            <img src="./assets/img/profile-photo.jpg" alt="">
+            <img src="assets/profile/img/profile-photo.jpg" alt="">
         </figure>
         <div class="text">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore fugiat labore magnam minima odit.
