--- a/review.html
+++ b/review.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <div class="img-header">
-        <img src="assets/img/logo.png" alt="Solicitor">
+        <img src="assets/profile/img/logo.png" alt="Solicitor">
     </div>
     <div>
         <h1>Add a review</h1>
