--- a/review.html
+++ b/review.html
@@ -373,7 +373,7 @@ of service and an unethical practice, committing fraud on reviews is also prohib
                             <i class="fab fa-linkedin-in"></i>
                         </div>
                         <div class="right">
-                            <h4>Sign in with Facebook</h4>
+                            <h4>Sign in with LinkedIn</h4>
                         </div>
                     </a>
                     <a href="#" class="google">
@@ -381,7 +381,7 @@ of service and an unethical practice, committing fraud on reviews is also prohib
                             <i class="fab fa-google"></i>
                         </div>
                         <div class="right">
-                            <h4>Sign in with Facebook</h4>
+                            <h4>Sign in with Google</h4>
                         </div>
                     </a>
                 </div>
